login button align fix

--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -77,6 +77,11 @@
   margin-left: 5px;
   max-width:150px;
 }
+
+.header li#login{
+  top:-5px;
+}
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-bottom: 0;
